[gd_scene load_steps=27 format=2]

[ext_resource path="res://Source/Fonts/Azonix-1VB0.otf" type="DynamicFontData" id=1]
[ext_resource path="res://LevelSelector.gd" type="Script" id=2]
[ext_resource path="res://Source/Images/Level/Africa.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.00546448, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.219608, 0.207843, 0.247059, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 22
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Animation" id=7]
resource_name = "LoadImage"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("PlaceImage:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PlaceImage:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PlaceImage:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("PlaceImage:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=8]
resource_name = "LoadIn"

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("PlaceImage:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PlaceImage:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PlaceImage:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("PlaceImage:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=10]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 22
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=23]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=11]
resource_name = "FadeIn"
tracks/0/type = "bezier"
tracks/0/path = NodePath("LoadinColour:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("LoadinColour:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LoadinColour:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("LoadinColour:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("LoadinColour:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("LoadinColour:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LoadinColour:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("LoadinColour:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=15]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="MissionList" type="Control" parent="."]
margin_left = 746.0
margin_top = 157.0
margin_right = 1012.0
margin_bottom = 575.0

[node name="ScrollContainer" type="ScrollContainer" parent="MissionList"]
margin_left = 16.0
margin_top = -63.0
margin_right = 252.0
margin_bottom = 229.0

[node name="VBoxContainer" type="VBoxContainer" parent="MissionList/ScrollContainer"]
theme = SubResource( 4 )
custom_constants/separation = 9

[node name="PlaceSelectButton" type="Button" parent="MissionList"]
margin_left = 3.0
margin_top = -116.0
margin_right = 239.0
margin_bottom = -83.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "AFRICA"

[node name="PlaceImage" type="TextureRect" parent="MissionList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -833.0
margin_top = -233.0
margin_right = -444.0
margin_bottom = 125.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="MissionList"]
reset_on_save = false
anims/LoadImage = SubResource( 7 )
anims/LoadIn = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="MissionInfo" type="Control" parent="MissionList"]
margin_left = -10.0
margin_top = 13.0
margin_right = 30.0
margin_bottom = 53.0

[node name="ColorRect" type="ColorRect" parent="MissionList/MissionInfo"]
margin_left = 23.0
margin_top = 244.0
margin_right = 256.0
margin_bottom = 421.0
color = Color( 0.219608, 0.207843, 0.247059, 0 )

[node name="MissionCompleted" type="Label" parent="MissionList/MissionInfo/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.5
margin_top = 22.0
margin_right = 103.5
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "NOT COMPLETED"
align = 1
valign = 1

[node name="PlayButton" type="Button" parent="MissionList/MissionInfo/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -38.0
margin_right = 63.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 22 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 14 )
text = "PLAY"

[node name="DataCorrupted" type="Label" parent="MissionList/MissionInfo/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -862.5
margin_top = 62.5
margin_right = -287.5
margin_bottom = 84.5
custom_colors/font_color = Color( 0, 1, 0.0862745, 1 )
custom_fonts/font = SubResource( 23 )
text = "TOTAL DATA COLLECTED:"
autowrap = true

[node name="LoadinColour" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="ToMainMenu" type="Button" parent="."]
margin_left = 18.0
margin_top = 13.0
margin_right = 206.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "mAIN MENU"

[connection signal="pressed" from="MissionList/PlaceSelectButton" to="." method="_on_PlaceSelectButton_pressed"]
[connection signal="pressed" from="MissionList/MissionInfo/ColorRect/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ToMainMenu" to="." method="_on_ToMainMenu_pressed"]
